[project]
name = "python-playground"
version = "0.1.0"
description = "Default template for PDM package"
author = [
    {name = "pakseon25", email = "pakseon25@gmail.com"},
]
dependencies = []
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
